@startuml PB138_ERD_Current_Future
hide methods
hide stereotypes
skinparam linetype ortho
skinparam shadowing false
skinparam defaultFontName Segoe UI
skinparam class {
  BackgroundColor White
  BorderColor #334155
  ArrowColor #475569
  FontColor #0f172a
}

entity "TASK\n(as-is)" as TASK_ASIS {
  * id : int <<PK>>
  --
  title : string
  done : boolean
}

entity "CALENDAR_EVENT\n(as-is)" as EVENT_ASIS {
  * id : int <<PK>>
  --
  title : string
  date : string
}

entity "EVENT_META\n(as-is)" as META_ASIS {
  * event_id : int <<PK, FK>>
  --
  time : string
  location : string
  icon : string
  accent : string
}

entity "SUBJECT\n(frontend model)" as SUBJECT_ASIS {
  * id : int <<PK>>
  --
  code : string
  name : string
  teacher : string
  files : int
  notes : int
  archived : boolean
}

entity "MANAGED_FILE\n(frontend model)" as FILE_ASIS {
  * id : int <<PK>>
  --
  name : string
  size : string
  category : string
  shared : boolean
}

entity "USER_PROFILE\n(frontend singleton)" as PROFILE_ASIS {
  * email : string <<PK>>
  --
  fullName : string
  school : string
  studyMajor : string
  studyYear : string
  studyType : string
  avatarDataUrl : string?
}

EVENT_ASIS ||--|| META_ASIS : metadata 1:1

entity "SUBJECT\n(to-be)" as SUBJECT {
  * id : int <<PK>>
  --
  code : string
  name : string
  teacher : string
  createdAt : datetime
  updatedAt : datetime
}

entity "TASK\n(to-be)" as TASK {
  * id : int <<PK>>
  --
  subjectId : int <<FK>>
  title : string
  done : boolean
  dueAt : datetime?
  createdAt : datetime
  updatedAt : datetime
}

entity "CALENDAR_EVENT\n(to-be)" as EVENT {
  * id : int <<PK>>
  --
  subjectId : int <<FK>>
  title : string
  date : date
  time : string
  location : string
  createdAt : datetime
  updatedAt : datetime
}

entity "FILE_RECORD\n(to-be)" as FILE_RECORD {
  * id : int <<PK>>
  --
  subjectId : int <<FK>>
  name : string
  mimeType : string
  sizeBytes : bigint
  shared : boolean
  pathOrUrl : string
  createdAt : datetime
  updatedAt : datetime
}

entity "USER_PROFILE\n(to-be)" as PROFILE {
  * id : int <<PK>>
  --
  fullName : string
  email : string <<UNIQUE>>
  school : string
  studyMajor : string
  studyYear : string
  studyType : string
  avatarUrl : string?
  createdAt : datetime
  updatedAt : datetime
}

entity "AUDIT_LOG\n(to-be)" as AUDIT {
  * id : int <<PK>>
  --
  subjectId : int <<FK>>
  entityType : string
  entityId : int
  action : string
  beforeData : json?
  afterData : json?
  createdAt : datetime
}

PROFILE ||--o{ SUBJECT : owner
SUBJECT ||--o{ TASK : contains
SUBJECT ||--o{ EVENT : plans
SUBJECT ||--o{ FILE_RECORD : materials
SUBJECT ||--o{ AUDIT : history scope

skinparam class {
  BackgroundColor<<future>> #dbeafe
  BorderColor<<future>> #2563eb
  FontColor<<future>> #1e3a8a
}

SUBJECT <<future>>
TASK <<future>>
EVENT <<future>>
FILE_RECORD <<future>>
PROFILE <<future>>
AUDIT <<future>>

note bottom
Modrá = navrhované cílové schéma.
As-is část odráží aktuální implementaci v repozitáři.
end note

@enduml
